--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-    web de prueba
+    web de prueba y de verificar el commit
     <button onclick="clickeado()">Clickeame</button>
 </body>
 </html>
